rewrite accession-ws to use read-only services